# 160Grab

./: .gitignore  README.md  main.py  plan1.md  plan2.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: example.yaml
docs/: compare_with_attach.md  future-improvements.md
docs/advertisement/: why-160grab.md
docs/superpowers/handoffs/: 2026-03-23-91160-manual-takeover-prompt.md  2026-03-23-91160-manual-takeover.md
docs/superpowers/plans/: 2026-03-22-91160-playwright-core.md
packaging/: 160Grab.command  160grab.spec  README-release.md  build-macos.sh  build-windows.ps1  build_release.py  playwright_browsers.py  write_embedded_version.py
references/: 91160.md
src/grab/: __init__.py  errors.py  version_info.py
src/grab/browser/: __init__.py  page_api.py  playwright_client.py
src/grab/core/: __init__.py  runner.py  scheduler.py
tests/: test_main.py
tests/browser/: test_page_api.py  test_playwright_client.py
tests/core/: test_runner.py
tests/e2e/: conftest.py  test_live_flow.py
tests/fixtures/: booking_page.html  booking_submit_success.html  channel_1_schedule.json  channel_2_schedule.json  login_page.html  member_page.html
tests/observability/: test_notifications.py  test_reporter.py
tests/services/: test_auth.py  test_booking.py  test_ocr.py  test_schedule.py  test_session.py
tests/userscripts/: test_doctor_page_poller.py
tests/utils/: test_config_loader.py  test_config_writer.py  test_profile_manager.py  test_rate_limit.py  test_runtime.py  test_version_info.py
userscripts/: 91160-doctor-page-poller.user.js
(+16 files in other folders)
